# algomark

./: .gitignore  README.md  pyproject.toml
algomark/: univariates.ipynb  univariates.py
sample_data/: sample_input.xlsx  sample_macro.csv
