[tool.poetry]
name = "algomark"
version = "0.1.0"
description = ""
authors = ["Akash <akash.iitr17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
numpy = "^1.26.3"
scikit-learn = "^1.3.2"
statsmodels = "^0.14.1"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
prophet = "^1.1.5"
openpyxl = "^3.1.2"
plotly = "^5.18.0"
xgboost = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
